# wiki-pt-rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: bmx_fts.py  chunk_and_embed_dataset.py  create_hf_dataset.py  duckdb_utils.py  qa_gen.py  timer.py  vicinity_vss.py
